[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/enemy/Boss.gd" id="1_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(160, 140)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp"]
bg_color = Color(1, 0, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0, 0, 0, 0.5)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_script")

[node name="Effects" type="Node2D" parent="."]

[node name="Glow" type="Sprite2D" parent="Effects"]
modulate = Color(1, 0, 0.5, 0.3)

[node name="AuraParticles" type="GPUParticles2D" parent="Effects"]
amount = 30
process_material = null
lifetime = 1.5

[node name="Orbiters" type="Node2D" parent="Effects"]

[node name="Orb1" type="Sprite2D" parent="Effects/Orbiters"]
position = Vector2(87, 7)
scale = Vector2(0.5, 0.5)

[node name="Orb2" type="Sprite2D" parent="Effects/Orbiters"]
position = Vector2(-87, 7)
scale = Vector2(0.5, 0.5)

[node name="Visual" type="Sprite2D" parent="."]
scale = Vector2(3, 3)

[node name="HP_Canvas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -120.0
offset_bottom = -120.0

[node name="LocalBar" type="ProgressBar" parent="HP_Canvas"]
custom_minimum_size = Vector2(150, 12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -6.0
offset_right = 75.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_hp")
value = 100.0
show_percentage = false

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
